

namespace Transport.Domain.Common
{
    public interface IActivatable
    {
        bool IsActive { get; }
    }
}
